--- a/css/eco-system.css
+++ b/css/eco-system.css
@@ -139,7 +139,7 @@ body {
     padding-top: 20vh;
     box-sizing: border-box;
     padding: 10%;
-    background-image: url("../images/placeholderimage1.jpg");
+    background-image: url("images/placeholderimage1.jpg");
     background-size: cover;
 }
 
